--- a/app/src/main/res/layout/dialog_game_step.xml
+++ b/app/src/main/res/layout/dialog_game_step.xml
@@ -31,17 +31,17 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
+                    android:layout_marginBottom="7dp"
                     android:textColor="@color/colorAccent"
                     android:textSize="15sp"
                     android:text="[ Completed ]"/>
 
             <TextView
+                    android:id="@+id/message"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/colorTextPrimary"
-                    android:textSize="15sp"
-                    android:text="You have completed this level successfully!"/>
+                    android:textSize="15sp"/>
 
         </LinearLayout>
 
