--- a/app/src/main/res/layout/dialog_game_step.xml
+++ b/app/src/main/res/layout/dialog_game_step.xml
@@ -29,12 +29,12 @@
                 android:orientation="vertical">
 
             <TextView
+                    android:id="@+id/title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="7dp"
                     android:textColor="@color/colorAccent"
-                    android:textSize="15sp"
-                    android:text="[ Completed ]"/>
+                    android:textSize="15sp"/>
 
             <TextView
                     android:id="@+id/message"
@@ -62,7 +62,6 @@
             android:background="?android:attr/selectableItemBackground"
             android:textColor="@color/colorAccent"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:text="Close"/>
+            android:textStyle="bold"/>
 
 </LinearLayout>
