--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,11 +33,16 @@
     </style>
 
     <style name="optionsMenuStyle" parent="@style/ThemeOverlay.AppCompat.Dark">
-        <item name="android:itemBackground">@color/colorPrimary</item>
+        <item name="android:itemBackground">@color/colorBackgroundPanel</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
     <style name="Widget.BottomNavigationView" parent="Widget.Design.BottomNavigationView">
         <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/ic_splash</item>
     </style>
 
 </resources>
