--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -26,6 +26,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
                 android:textSize="16sp"
+                android:lineSpacingMultiplier="1"
+                android:lineSpacingExtra="3dp"
                 android:textColor="@color/colorTextPrimary"/>
 
         <android.support.v7.widget.CardView
