--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,14 @@
               android:label="LevelsFragment">
         <action android:id="@+id/levels_to_game" app:destination="@id/gameFragment"
                 app:enterAnim="@anim/anim_enter_from_right" app:exitAnim="@anim/nav_default_exit_anim"
-                app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim" app:popExitAnim="@anim/nav_default_exit_anim"/>
+        <action android:id="@+id/levels_to_profile" app:destination="@id/profileFragment"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
     </fragment>
 
     <fragment android:id="@+id/gameFragment" android:name="com.aucc.game.ui.game.GameFragment"
-              android:label="GameFragment"/>
+              android:label="GameFragment">
+    </fragment>
+    <fragment android:id="@+id/profileFragment" android:name="com.aucc.game.ui.profile.ProfileFragment"
+              android:label="ProfileFragment"/>
 </navigation>
