add strings to localization file

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,26 +20,36 @@
             <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="?android:attr/actionBarSize"
                     android:background="@color/colorPrimary"
+                    app:title="@null"
                     app:popupTheme="@style/optionsMenuStyle">
 
-                <ImageButton
-                        android:id="@+id/back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:scaleX="0"
-                        android:scaleY="0"
-                        android:src="@drawable/ic_arrow_back_white_24dp"
-                        android:background="?android:attr/selectableItemBackgroundBorderless"/>
-
-                <TextView
-                        android:id="@+id/title"
+                <FrameLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="[ AU Cyber Club ]"
-                        android:textColor="@color/white"
-                        android:textSize="17sp"/>
+                        android:layout_height="match_parent">
+
+                    <ImageButton
+                            android:id="@+id/back"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:scaleX="0"
+                            android:scaleY="0"
+                            android:layout_gravity="center_vertical"
+                            android:src="@drawable/ic_arrow_back_white_24dp"
+                            android:background="?android:attr/selectableItemBackgroundBorderless"
+                            tools:ignore="ContentDescription"/>
+
+                    <TextView
+                            android:id="@+id/title"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="@string/title"
+                            android:textColor="@color/white"
+                            android:textSize="17sp"/>
+
+                </FrameLayout>
 
             </android.support.v7.widget.Toolbar>
 
