--- a/app/src/main/res/layout/dialog_game_step.xml
+++ b/app/src/main/res/layout/dialog_game_step.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:ignore="ContentDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -58,7 +60,8 @@
             android:layout_height="wrap_content"
             android:minWidth="0dp"
             android:minHeight="0dp"
-            android:padding="15dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
             android:background="?android:attr/selectableItemBackground"
             android:textColor="@color/colorAccent"
             android:textSize="16sp"
