--- a/app/src/main/res/layout/row_level_l.xml
+++ b/app/src/main/res/layout/row_level_l.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        tools:ignore="ContentDescription">
 
     <data>
         <variable name="level" type="com.aucc.game.rest.model.Level"/>
