--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/action_profile"
-        android:title="Profile"
+        android:title="@string/menu_profile"
         android:icon="@drawable/outline_account_circle_24"
         app:showAsAction="always" />
 
