--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -67,6 +67,8 @@
                             android:layout_height="wrap_content"
                             android:textColor="@color/colorAccent"
                             android:text="@string/terminal_user"
+                            android:layout_marginStart="0dp"
+                            android:layout_marginEnd="5dp"
                             android:textSize="15sp"/>
 
                     <EditText
