--- a/app/src/main/res/layout/row_terminal.xml
+++ b/app/src/main/res/layout/row_terminal.xml
@@ -17,6 +17,8 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorAccent"
                 android:text="@string/terminal_user"
+                android:layout_marginStart="0dp"
+                android:layout_marginEnd="5dp"
                 android:textSize="15sp"/>
 
         <TextView
